# rnd

./: .gitignore  CMakeLists.txt  Journal.md  README.md  annotated.html  base__state_8hpp_source.html  classBaseRNG-members.html  classBaseRNG.html  classPhillox-members.html  classPhillox.html  classSquares-members.html  classSquares.html  classThreefry-members.html  classThreefry.html  classTyche-members.html  classTyche.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d44c64559bbebec7f509842c48db8b23.html  hierarchy.html  index.html  md__home_runner_work_rnd_rnd_examples_README.html  pages.html  phillox_8h_source.html  squares_8h_source.html  structParticle.html  structrnd_1_1vec2.html  structrnd_1_1vec3.html  structrnd_1_1vec4.html  threefry_8h_source.html  tyche_8h_source.html  util_8h_source.html
.github/workflows/: gh-pages-deploy.yml  run-tests.yml
benchmarks/: CMakeLists.txt  raw_speed.cpp  raw_speed_cuda.cu
docs/: Doxyfile
examples/: CMakeLists.txt  basic.cpp  basic_usage.cpp  pi_openmp.cpp  pract_rand.cpp  testu01-multistream.cpp  testu01.cpp  tmp.cpp
include/: base_state.hpp  phillox.h  squares.h  threefry.h  tyche.h  util.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  pages_0.js  searchdata.js
tests/: CMakeLists.txt  check.py  pract_rand_multistream.cpp  run_normal.txt  run_stat_tests.py  test_normal.cpp  test_uniform.cpp  testu01-multistream.cpp
